--- a/example/package.json
+++ b/example/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-math-view-example",
+  "name": "react-mathlive-example",
   "homepage": ".",
   "version": "0.0.0",
   "private": true,
